# riskee

./: .env.example  .gitignore  .pre-commit-config.yaml  DEV_GETTING_STARTED.md  DEV_GETTING_STARTED_WINDOWS.md  README.md  SETUP_COMPLETE.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: instructions.md  project-context.md
config/: nats_streams.md  prometheus.yml
dev_gym/: 01_TimescaleDB.md  02_Redis.md  03_NATS.md  04_Qdrant.md  05_Ollama.md  06_Prometheus.md  07_Grafana.md  README.md
docs/: INFRASTRUCTURE_ARCHITECTURE.md  NATS_MESSAGE_SCHEMAS.md  PROGRESS_SUMMARY.md  REDIS_DATA_STRUCTURES.md
docs/ver_0_1/Feature_1_PricePrediction/: 01_Architecture_Overview.md  02_Design_Specification.md
docs/ver_0_1/Feature_1_PricePrediction/milestones/: 00_Implementation_Plan_Overview.md  M1_Foundation_Infrastructure.md  M2_Data_Ingestion.md  M3_Feature_Engineering.md  M4_ML_Models.md  M5_Prediction_Pipeline.md  M6_LLM_RAG_System.md  M7_API_Gateway.md  M8_UI_Development.md  M9_Testing_Deployment.md  README.md
docs/ver_0_1/Feature_1_PricePrediction/milestones/M1/: GETTING_STARTED.md  journal.md
migrations/: env.py
migrations/versions/: 20251219_1000_001_initial_schema.py
scripts/: README.md  db_backup.ps1  db_backup.sh  db_reset.ps1  db_reset.sh  db_restore.ps1  db_restore.sh  manage_migrations.ps1  manage_migrations.sh  nats_publish.py  nats_stream_info.py  nats_subscribe.py  redis_inspect.ps1  redis_inspect.sh  requirements.txt  setup_dev_environment.ps1  setup_dev_environment.sh  setup_nats.py  setup_nats.sh  setup_ollama.py  setup_qdrant.py  test_nats.sh  test_nats_pubsub.py  test_redis.sh  verify_startup.ps1  verify_startup.sh
scripts/db/init/: 01_init_schema.sql
tests/: conftest.py  test_infrastructure.py
